objects/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: demo-argocd
spec:
  selector:
    app: hello
  ports:
    - name: http
      port: 80
      targetPort: 8080
