objects/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello
  namespace: demo-argocd
spec:
  to:
    kind: Service
    name: hello
  port:
    targetPort: http
  tls:
    termination: edge
